--- a/sample/PSharp.Template.Systems/PSharp.Template.Systems.csproj
+++ b/sample/PSharp.Template.Systems/PSharp.Template.Systems.csproj
@@ -5,14 +5,14 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>$(SolutionDir)output\release\</OutputPath>
-    <DocumentationFile>$(SolutionDir)output\release\netstandard2.1\PSharp.Template.Systems.xml</DocumentationFile>
+    <OutputPath>..\..\output\release\</OutputPath>
+    <DocumentationFile>..\..\output\release\netstandard2.1\PSharp.Template.Systems.xml</DocumentationFile>
     <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <OutputPath>$(SolutionDir)output\release\</OutputPath>
-    <DocumentationFile>$(SolutionDir)output\release\netstandard2.1\PSharp.Template.Systems.xml</DocumentationFile>
+    <OutputPath>..\..\output\release\</OutputPath>
+    <DocumentationFile>..\..\output\release\netstandard2.1\PSharp.Template.Systems.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
