删除敏感信息

--- a/sample/PSharp.Template.ApiHost/appsettings.json
+++ b/sample/PSharp.Template.ApiHost/appsettings.json
@@ -23,8 +23,8 @@
     "IgnoreUrls": [ "api/user/info", "api/user/login", "api/user/{id}", "api/user/{id?}", "api/cache" ]
   },
   "JMessageOptions": {
-    "AppKey": "490b76c028efac254c69f18f",
-    "MasterSecret": "48c44641d86e6f0d40fb8e58"
+    "AppKey": "******",
+    "MasterSecret": "*******"
   },
   "SenparcSetting": {
     //以下为 CO2NET 的 SenparcSetting 全局配置，请勿修改 key，勿删除任何项
@@ -44,8 +44,8 @@
     //公众号
     "Token": "weixin",
     "EncodingAESKey": "",
-    "WeixinAppId": "wx40fa4683f812a3bf",
-    "WeixinAppSecret": "073efa60cf012f478145a7949d8d47b3"
+    "WeixinAppId": "**********",
+    "WeixinAppSecret": "*********"
     ////小程序
     //"WxOpenAppId": "WxOpenAppId",
     //"WxOpenAppSecret": "WxOpenAppSecret",
