简洁版读写分离

--- a/sample/PSharp.Template.ApiHost/appsettings.json
+++ b/sample/PSharp.Template.ApiHost/appsettings.json
@@ -4,6 +4,11 @@
     "MySqlConnection": "server=localhost;user id=root;password=Y0EdwZ8tX5UzeZv3;database=PSharp.Template;port=3306;CharSet=utf8;"
     //"MySqlConnection": "server=127.0.0.1;user id=root;password=Y0EdwZ8tX5UzeZv3;database=PSharp.Template;port=4040;CharSet=utf8;"
   },
+  "Slave": [
+    "Server=.;Database=PSharp.Template.Read01;uid=sa;pwd=111111;MultipleActiveResultSets=true",
+    "Server=.;Database=PSharp.Template.Read02;uid=sa;pwd=111111;MultipleActiveResultSets=true",
+    "Server=.;Database=PSharp.Template.Read03;uid=sa;pwd=111111;MultipleActiveResultSets=true"
+  ],
   "Logging": {
     "LogLevel": {
       "Default": "Information",
