--- a/sample/PSharp.Template.Common/PSharp.Template.Common.csproj
+++ b/sample/PSharp.Template.Common/PSharp.Template.Common.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PSharp.Template.Core\PSharp.Template.Core.csproj" />
+    <ProjectReference Include="..\PSharp.Template.UnitOfWork\PSharp.Template.UnitOfWork.csproj" />
   </ItemGroup>
 
   <ItemGroup>
