--- a/sample/PSharp.Template.ApiHost/appsettings.json
+++ b/sample/PSharp.Template.ApiHost/appsettings.json
@@ -4,10 +4,17 @@
     "MySqlConnection": "server=localhost;user id=root;password=Y0EdwZ8tX5UzeZv3;database=PSharp.Template;port=3306;CharSet=utf8;"
     //"MySqlConnection": "server=127.0.0.1;user id=root;password=Y0EdwZ8tX5UzeZv3;database=PSharp.Template;port=4040;CharSet=utf8;"
   },
+  "DbOptions": {
+    //"Strategy": "1", // 1、轮询 2、随机  3、权重 
+    "Strategy": "PSharp.Template.Core.Datas.DbStrategy.RandomStrategy",
+    "SlaveList": [
+      "Server=.;Database=PSharp.Template.Read01;uid=sa;pwd=111111;MultipleActiveResultSets=true",
+      "Server=.;Database=PSharp.Template.Read02;uid=sa;pwd=111111;MultipleActiveResultSets=true",
+      "Server=.;Database=PSharp.Template.Read03;uid=sa;pwd=111111;MultipleActiveResultSets=true"
+    ]
+  },
   "Slave": [
-    "Server=.;Database=PSharp.Template.Read01;uid=sa;pwd=111111;MultipleActiveResultSets=true",
-    "Server=.;Database=PSharp.Template.Read02;uid=sa;pwd=111111;MultipleActiveResultSets=true",
-    "Server=.;Database=PSharp.Template.Read03;uid=sa;pwd=111111;MultipleActiveResultSets=true"
+
   ],
   "Logging": {
     "LogLevel": {
