--- a/sample/PSharp.Template.Core/PSharp.Template.Core.csproj
+++ b/sample/PSharp.Template.Core/PSharp.Template.Core.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.6" />
     <PackageReference Include="Senparc.Weixin.MP" Version="16.10.401" />
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
