修复不配置读写分离Bug

--- a/sample/PSharp.Template.ApiHost/appsettings.json
+++ b/sample/PSharp.Template.ApiHost/appsettings.json
@@ -8,9 +8,9 @@
     //"Strategy": "1", // 1、轮询 2、随机  3、权重 
     "Strategy": "PSharp.Template.Core.Datas.DbStrategy.RandomStrategy",
     "SlaveList": [
-      "Server=.;Database=PSharp.Template.Read01;uid=sa;pwd=111111;MultipleActiveResultSets=true",
-      "Server=.;Database=PSharp.Template.Read02;uid=sa;pwd=111111;MultipleActiveResultSets=true",
-      "Server=.;Database=PSharp.Template.Read03;uid=sa;pwd=111111;MultipleActiveResultSets=true"
+      //"Server=.;Database=PSharp.Template.Read01;uid=sa;pwd=111111;MultipleActiveResultSets=true",
+      //"Server=.;Database=PSharp.Template.Read02;uid=sa;pwd=111111;MultipleActiveResultSets=true",
+      //"Server=.;Database=PSharp.Template.Read03;uid=sa;pwd=111111;MultipleActiveResultSets=true"
     ]
   },
   "Logging": {
